[gd_scene load_steps=19 format=3 uid="uid://ddeas4dqqgef8"]

[ext_resource type="Script" path="res://assets/weapons/assault_rifle/WeaponInHand.gd" id="1_n31lh"]
[ext_resource type="AudioStream" uid="uid://cbc8qag73a8td" path="res://assets/weapons/assault_rifle/audio/activate.ogg" id="2_h6nwt"]
[ext_resource type="AudioStream" uid="uid://sao7vc1idaco" path="res://assets/weapons/assault_rifle/audio/shoot.ogg" id="3_fo8u5"]
[ext_resource type="AudioStream" uid="uid://cawa8les3yhtt" path="res://assets/weapons/assault_rifle/audio/reload.ogg" id="4_uhpvy"]
[ext_resource type="AudioStream" uid="uid://nne16k88x0a" path="res://assets/weapons/assault_rifle/audio/empty.ogg" id="5_55dqq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l5ufs"]
albedo_color = Color(0.556863, 0.635294, 0.670588, 1)
emission_enabled = true
emission = Color(0.321569, 0.321569, 0.321569, 1)

[sub_resource type="BoxMesh" id="BoxMesh_n3ubk"]
material = SubResource("StandardMaterial3D_l5ufs")
size = Vector3(0.06, 0.1, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_us33u"]
albedo_color = Color(0.478431, 0.45098, 0.423529, 1)
emission_enabled = true
emission = Color(0.321569, 0.321569, 0.321569, 1)

[sub_resource type="BoxMesh" id="BoxMesh_5tgf7"]
material = SubResource("StandardMaterial3D_us33u")
size = Vector3(0.061, 0.2, 0.15)

[sub_resource type="BoxMesh" id="BoxMesh_tihji"]
material = SubResource("StandardMaterial3D_us33u")
size = Vector3(0.05, 0.25, 0.12)

[sub_resource type="Animation" id="Animation_5mnti"]
resource_name = "activate"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.05, -1, 2.08165e-12, 0.5, 1, -0.05, -0.2, 2.08165e-12, 0.7, 1, 2.08165e-12, 0.05, 2.08165e-12, 0.9, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.698132, 3.48787e-16, 3.48787e-16), Vector3(0.244346, 3.48787e-16, 3.48787e-16), Vector3(-0.0523599, 3.48787e-16, 3.48787e-16), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6ee28"]
resource_name = "deactivate"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12, 0.1, 1, 2.08165e-12, -0.05, 2.08165e-12, 0.5, 1, -0.05, -0.2, 2.08165e-12, 1, 1, -0.05, -1, 2.08165e-12)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.244346, 3.48787e-16, 3.48787e-16), Vector3(0.959931, 3.48787e-16, 3.48787e-16)]
}

[sub_resource type="Animation" id="Animation_b2xa3"]
resource_name = "idle"
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_8v67e"]
resource_name = "reload_primary"
length = 1.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12, 0.3, 1, 2.08165e-12, 0.33, 2.08165e-12, 0.9, 1, 2.08165e-12, 0.25, 2.08165e-12, 1.2, 1, 2.08165e-12, 0.1, 2.08165e-12, 1.5, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(3.48787e-16, 3.48787e-16, 3.48787e-16), Vector3(-0.20944, 3.48787e-16, 0.349066), Vector3(-0.20944, 3.48787e-16, 0.349066), Vector3(-0.0174533, 3.48787e-16, 3.48787e-16)]
}
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh/Mag")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 2.08165e-12, -0.1, -0.1, 0.3, 1, 2.08165e-12, -0.5, -0.2, 0.5, 1, 2.08165e-12, -0.5, -0.2, 1.2, 1, 2.08165e-12, -0.1, -0.1)

[sub_resource type="Animation" id="Animation_6nbq2"]
resource_name = "reload_secondary"
length = 1.5
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12, 0.3, 1, 2.08165e-12, 0.33, 2.08165e-12, 0.9, 1, 2.08165e-12, 0.25, 2.08165e-12, 1.2, 1, 2.08165e-12, 0.1, 2.08165e-12, 1.5, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(3.48787e-16, 3.48787e-16, 3.48787e-16), Vector3(-0.20944, 3.48787e-16, 0.349066), Vector3(-0.20944, 3.48787e-16, 0.349066), Vector3(-0.0174533, 3.48787e-16, 3.48787e-16)]
}
tracks/2/type = "position_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh/Mag")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 2.08165e-12, -0.1, -0.1, 0.3, 1, 2.08165e-12, -0.5, -0.2, 0.5, 1, 2.08165e-12, -0.5, -0.2, 1.2, 1, 2.08165e-12, -0.1, -0.1)

[sub_resource type="Animation" id="Animation_tdsra"]
resource_name = "shoot_primary"
length = 0.4
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12, 0.1, 1, 2.08165e-12, 0.01, 2.08165e-12, 0.4, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.025, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(3.48787e-16, 3.48787e-16, 3.48787e-16), Vector3(-0.20944, 3.48787e-16, 3.48787e-16), Vector3(-0.0174533, 3.48787e-16, 3.48787e-16), Vector3(3.48787e-16, 3.48787e-16, 3.48787e-16)]
}

[sub_resource type="Animation" id="Animation_ca5sg"]
resource_name = "shoot_secondary"
length = 0.8
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12, 0.1, 1, 2.08165e-12, 0.02, 2.08165e-12, 0.2, 1, 2.08165e-12, 0.015, 2.08165e-12, 0.8, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.025, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(3.48787e-16, 3.48787e-16, 3.48787e-16), Vector3(-0.349066, 3.48787e-16, 3.48787e-16), Vector3(-0.261799, 3.48787e-16, 3.48787e-16), Vector3(3.48787e-16, 3.48787e-16, 3.48787e-16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_baphn"]
_data = {
"activate": SubResource("Animation_5mnti"),
"deactivate": SubResource("Animation_6ee28"),
"idle": SubResource("Animation_b2xa3"),
"reload_primary": SubResource("Animation_8v67e"),
"reload_secondary": SubResource("Animation_6nbq2"),
"shoot_primary": SubResource("Animation_tdsra"),
"shoot_secondary": SubResource("Animation_ca5sg")
}

[node name="AssaultRifle" type="Node3D"]
script = ExtResource("1_n31lh")

[node name="Mesh" type="Node3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="Barrel" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(1, -2.64698e-23, 1.51089e-23, 2.64698e-23, 1, -1.51089e-23, -1.51089e-23, 1.51088e-23, 1, 2.08165e-12, 2.08165e-12, 0.1)
mesh = SubResource("BoxMesh_n3ubk")

[node name="Grip" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(1, -3.24976e-23, 2.10648e-23, 2.64698e-23, 0.96806, -0.250718, -1.51089e-23, 0.250718, 0.96806, 5.03659e-05, -0.11457, -0.0989528)
mesh = SubResource("BoxMesh_5tgf7")

[node name="Mag" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(1, 1.93206e-23, -1.05788e-23, 3.42215e-23, 0.96806, -0.250718, -2.34006e-23, 0.250718, 0.96806, 2.08165e-12, -0.1, -0.1)
mesh = SubResource("BoxMesh_tihji")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_baphn")
}

[node name="Audio" type="Node3D" parent="."]

[node name="Activate" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("2_h6nwt")

[node name="ShootPrimary" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("3_fo8u5")

[node name="ReloadPrimary" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("4_uhpvy")

[node name="ShootSecondary" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("3_fo8u5")

[node name="ReloadSecondary" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("4_uhpvy")

[node name="Empty" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("5_55dqq")
